# sitemap-to-sqlite

./: pyproject.toml
sitemap_to_sqlite/: cli.py
tests/: test_sitemap_to_sqlite.py
